[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "burndown-chart-generator"
version = "0.1.0"
description = "Interactive Burndown Chart Generator"
requires-python = ">=3.9"

dependencies = [
    "matplotlib==3.8.2",
    "pandas==2.2.1",
    "numpy==1.26.3",
    "streamlit==1.32.2"
]
